# movslib

./: .derived  .gitignore  .project  .pydevproject  Pipfile  README.md  mypy.ini  pyproject.toml  setup.py
demo/: demo_autotag.py
movs/: __init__.py  __main__.py  iterhelper.py  model.py  movs.py  test_estrattoconto.py  test_iterhelper.py  test_model.py  test_movs.py  test_postepay.py
movs/estrattoconto/: __init__.py
movs/postepay/: __init__.py
movs/scansioni/: __init__.py  __main__.py
src/: __main__.py
src/movs/: __init__.py  iterhelper.py  model.py  movs.py  postepay.py  scansioni.py
src/movs/estrattoconto/: __init__.py
src/movs/iterhelper/: __init__.py
src/movs/model/: __init__.py
src/movslib/: _java.py  iterhelper.py  libretto.py  postepay.py  reader.py  scansioni.py
src/movslib/autotag/: autotag.py  model.py
src/movslib/buoni/: csv.py  xlsx.py
src/movslib/estrattoconto/: __init__.py
stubs/: setuptools.pyi
tests/: test_estrattoconto.py  test_iterhelper.py  test_libretto.py  test_libretto.xlsx  test_listamovimentixlsx.py  test_listamovimentixlsx.xlsx  test_model.py  test_movs.py  test_postepay.py  test_postepay_2.py  test_reader.py
